Fix multi-select going out of the screen. Upgrade the project (angular, material).

--- a/src/styles.css
+++ b/src/styles.css
@@ -91,10 +91,12 @@ body {
 }
 
 .opts-group {
-   width: 100%;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
+   padding-right: 35px;
+   padding-left: 35px;
+   /* width: 100%; */
 }
 
 .opts-title {
